@@ -32,7 +32,7 @@ Additional codes, to help Translators, follow the date as follows:
 	F - Major format change
 	p - Punctuation change  (doesn't affect translation)
 	M - Moved to another file
-	S - Spelling change		(doesn't affect translation)
+	S - Spelling change (doesn't affect translation)
 	w - Minor wording change
 	W - Major wording change or completely new text
 
@@ -43,8 +43,12 @@ occur in the respective language files.
 
 VERSION 4.1.6
 
-?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
+?$pgv_lang["whatever"]                   dd Monthname, year    Change codes and comments
 -------------------------------------------------------------------------------------------
++$pgv_lang["FULL_SOURCES"]               17 Oct 2008           A
++$pgv_lang["FULL_SOURCES_help"]          17 Oct 2008           A
++$pgv_lang["PREFER_LEVEL2_SOURCES"]      17 Oct 2008           A
++$pgv_lang["PREFER_LEVEL2_SOURCES_help"] 17 Oct 2008           A
 +$pgv_lang["DBPORT"]								02 Oct 2008				A
 +$pgv_lang["DBPORT_help"]							02 Oct 2008				A
 *$pgv_lang["SHOW_LIST_PLACES_help"]					12 Sep 2008				W
